--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -2695,7 +2695,155 @@
     - =@property= methods should be fast. Slow or complex work should be done in normal methods.
    
 
-*** TODO 30. Consider =@property= Instead of Refactoring Attributes
+*** DONE 30. Consider =@property= Instead of Refactoring Attributes
+    CLOSED: [2019-07-19 Fri 15:53]
+    - State "DONE"       from "IN-PROGRESS" [2019-07-19 Fri 15:53]
+    :LOGBOOK:
+    CLOCK: [2019-07-19 Fri 15:32]--[2019-07-19 Fri 15:53] =>  0:21
+    :END:
+
+    =@property= makes it easy for simple access of an instance's attributes to act smarter.
+
+    Example without the use of =@property=.
+    
+    #+begin_src python :session :results output :exports both
+      from datetime import datetime, timedelta
+
+      class Bucket(object):
+          def __init__(self, period):
+              self.period_delta = timedelta(seconds=period)
+              self.reset_time = datetime.now()
+              self.quota = 0
+
+          def __repr__(self):
+              return 'Bucket(quota=%d)' % self.quota
+
+      def fill(bucket, amount):
+          now = datetime.now()
+          if now - bucket.reset_time > bucket.period_delta:
+              bucket.quota = 0
+              bucket.reset_time = now
+          bucket.quota += amount
+
+      def deduct(bucket, amount):
+          now = datetime.now()
+          if now - bucket.reset_time > bucket.period_delta:
+              return False
+          if bucket.quota - amount < 0:
+              return False
+          bucket.quota -= amount
+          return True
+
+      bucket = Bucket(60)
+      fill(bucket, 100)
+      print(bucket)
+
+      if deduct(bucket, 99):
+          print('Had 99 quota')
+      else:
+          print('Not enough for 99 quota')
+      print(bucket)
+
+      if deduct(bucket, 3):
+          print('Had 3 quota')
+      else:
+          print('Not enough for 3 quota')
+      print(bucket)
+    #+end_src
+
+    #+RESULTS:
+    : Bucket(quota=100)
+    : Had 99 quota
+    : Bucket(quota=1)
+    : Not enough for 3 quota
+    : Bucket(quota=1)
+
+    We always have to compute the quota ourselves. Not a very useful implementation.
+    
+    Let's redesign.
+    
+    #+begin_src python :session :results output :exports both
+      from datetime import datetime, timedelta
+
+      class Bucket(object):
+          def __init__(self, period):
+              self.period_delta = timedelta(seconds=period)
+              self.reset_time = datetime.now()
+              self.max_quota = 0
+              self.quota_consumed = 0
+
+          def __repr__(self):
+              return 'Bucket(max_quota=%d, quota_consumed=%d)' % (self.max_quota, self.quota_consumed)
+
+          @property
+          def quota(self):
+              return self.max_quota - self.quota_consumed
+
+          @quota.setter
+          def quota(self, amount):
+              delta = self.max_quota - amount
+              if amount == 0:
+                  self.quota_consumed = 0
+                  self.max_quota = 0
+              elif delta < 0:
+                  assert self.quota_consumed == 0
+                  self.max_quota = amount
+              else:
+                  assert self.max_quota >= self.quota_consumed
+                  self.quota_consumed += delta
+
+      def fill(bucket, amount):
+          now = datetime.now()
+          if now - bucket.reset_time > bucket.period_delta:
+              bucket.quota = 0
+              bucket.reset_time = now
+          bucket.quota += amount
+
+      def deduct(bucket, amount):
+          now = datetime.now()
+          if now - bucket.reset_time > bucket.period_delta:
+              return False
+          if bucket.quota - amount < 0:
+              return False
+          bucket.quota -= amount
+          return True
+
+      bucket = Bucket(60)
+      print('Initial', bucket)
+      fill(bucket, 100)
+      print('Filled', bucket)
+
+      if deduct(bucket, 99):
+          print('Had 99 quota')
+      else:
+          print('Not enough for 99 quota')
+
+      print('Now', bucket)
+
+      if deduct(bucket, 3):
+          print('Had 3 quota')
+      else:
+          print('Not enough for 3 quota')
+
+      print('Still', bucket)
+    #+end_src
+
+    #+RESULTS:
+    : Initial Bucket(max_quota=0, quota_consumed=0)
+    : Filled Bucket(max_quota=100, quota_consumed=0)
+    : Had 99 quota
+    : Now Bucket(max_quota=100, quota_consumed=99)
+    : Not enough for 3 quota
+    : Still Bucket(max_quota=100, quota_consumed=99)
+
+    That's a better, an non-destructive way to incremently improve a container class.
+    
+    *Takeaways*
+
+    - Use =@property= to give existing instance attributes new functionality.
+    - Make incremental progress toward better data models by using =@property=.
+    - Consider refactoring a class and all call sites when you find yourself using =@property= too heavily.
+
 
 *** TODO 31. Use Descriptors for Reusable =@property= Methods
 
