--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -2866,10 +2866,10 @@
 ** Time
 
  #+BEGIN: clocktable :scope file :maxlevel 3
- #+CAPTION: Clock summary at [2019-07-17 Wed 16:01]
+ #+CAPTION: Clock summary at [2019-07-19 Fri 15:55]
  | Headline                                       | Time    |      |      |
  |------------------------------------------------+---------+------+------|
- | *Total time*                                   | *10:09* |      |      |
+ | *Total time*                                   | *10:30* |      |      |
  |------------------------------------------------+---------+------+------|
  | \_  Pythonic Thinking                          |         | 1:27 |      |
  | \_    8. Avoid More Than Two Expressions in... |         |      | 0:07 |
@@ -2895,7 +2895,8 @@
  | \_    26. Use Multiple Inheritance Only for... |         |      | 0:35 |
  | \_    27. Prefer Public Attributes Over...     |         |      | 0:42 |
  | \_    28. Inherit from =collections.abc=...    |         |      | 0:34 |
- | \_  Metaclasses and Attributes                 |         | 0:39 |      |
+ | \_  Metaclasses and Attributes                 |         | 1:00 |      |
  | \_    29. Use Plain Attributes Instead of...   |         |      | 0:39 |
+ | \_    30. Consider =@property= Instead of...   |         |      | 0:21 |
  #+END:
  
