--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -2845,7 +2845,186 @@
     - Consider refactoring a class and all call sites when you find yourself using =@property= too heavily.
 
 
-*** TODO 31. Use Descriptors for Reusable =@property= Methods
+*** DONE 31. Use Descriptors for Reusable =@property= Methods
+    CLOSED: [2019-07-22 Mon 17:14]
+    - State "DONE"       from "IN-PROGRESS" [2019-07-22 Mon 17:14]
+    :LOGBOOK:
+    CLOCK: [2019-07-22 Mon 16:38]--[2019-07-22 Mon 17:14] =>  0:36
+    :END:
+
+    The problem with =@property=...
+
+    #+begin_src python :session :results output :exports both
+      class Homework(object):
+          def __init__(self):
+              self._grade = 0
+
+          @property
+          def grade(self):
+              return self._grade
+
+          @grade.setter
+          def grade(self, value):
+              if not (0 <= value <= 100):
+                  raise ValueError('Grade must be between 0 and 100')
+              self._grade = value
+
+      galileo = Homework()
+      galileo.grade = 95
+
+
+      class Exam(object):
+          def __init__(self):
+              self._writing_grade = 0
+              self._math_grade = 0
+
+          @staticmethod
+          def _check_grade(value):
+              if not (0 <= value <= 100):
+                  raise ValueError('Grade must be between 0 and 100')
+
+          # Now we have to do some good ol' boilerplate.
+
+          @property
+          def writing_grade(self):
+              return self._writing_grade
+
+          @writing_grade.setter
+          def writing_grade(self, value):
+              self._check_grade(value) # <- Awe, man.
+              self._writing_grade = value
+
+          @property
+          def math_grade(self):
+              return self._math_grade
+
+          @math_grade.setter
+          def math_grade(self, value):
+              self._check_grade(value) # <- Awe, man.
+              self._math_grade = value
+    #+end_src
+
+
+    Better solution using Descriptors
+    
+    #+begin_src python :session :results output :exports both
+      class Grade(object):
+          def __init__(self):
+              self._value = 0
+
+          def __get__(self, instance, instance_type):
+              return self._value
+
+          def __set__(self, instance, value):
+              if not (0 <= value <= 100):
+                  raise ValueError('Grade must be between 0 and 100')
+              self._value = value
+
+      class Exam(object):
+          math_grade = Grade()
+          writing_grade = Grade()
+          science_grade = Grade()
+
+      first_exam = Exam()
+      first_exam.writing_grade = 82
+      first_exam.science_grade = 99
+      print('Writing', first_exam.writing_grade)
+      print('Science', first_exam.science_grade)
+
+      second_exam = Exam()
+      second_exam.writing_grade = 75
+
+      print('Second', second_exam.writing_grade, 'is right')
+      print('First', first_exam.writing_grade, 'is wrong')
+
+      print(Exam.__dict__['writing_grade'].__get__(first_exam, Exam))
+      print(Exam.__dict__['writing_grade'].__get__(second_exam, Exam))
+    #+end_src
+
+    #+RESULTS:
+    : Writing 82
+    : Science 99
+    : Second 75 is right
+    : First 75 is wrong
+    : 75
+    : 75
+
+    Reimplementation
+
+    #+begin_src python :session :results output :exports both
+      class Grade(object):
+          def __init__(self):
+              self._values = {}
+
+          def __get__(self, instance, instance_type):
+              if instance is None:
+                  return self
+              return self._values.get(instance, 0)
+
+          def __set__(self, instance, value):
+              if not (0 <= value <= 100):
+                  raise ValueError('Grade must be between 0 and 100')
+              self._values[instance] = value
+    #+end_src
+
+    But this will cause memory leaks. The =_values= dictionary will hold a reference to every instance of =Exam= ever passed to =__set___= of the lifetime of the program. This causes instances to never have their references count go to zero, preventing cleanup by the garbage collector.
+
+    
+    #+begin_src python :session :results output :exports both
+      from weakref import WeakKeyDictionary
+
+      class Grade(object):
+          def __init__(self):
+              self._values = WeakKeyDictionary()
+
+          def __get__(self, instance, instance_type):
+              if instance is None:
+                  return self
+              return self._values.get(instance, 0)
+
+          def __set__(self, instance, value):
+              if not (0 <= value <= 100):
+                  raise ValueError('Grade must be between 0 and 100')
+              self._values[instance] = value
+
+
+      class Exam(object):
+          math_grade = Grade()
+          writing_grade = Grade()
+          science_grade = Grade()
+
+
+      first_exam = Exam()
+      first_exam.writing_grade = 82
+      first_exam.science_grade = 99
+      print('Writing', first_exam.writing_grade)
+      print('Science', first_exam.science_grade)
+
+      second_exam = Exam()
+      second_exam.writing_grade = 75
+
+      print('Second', second_exam.writing_grade, 'is right')
+      print('First', first_exam.writing_grade, 'is right!!!')
+
+      print(Exam.__dict__['writing_grade'].__get__(first_exam, Exam))
+      print(Exam.__dict__['writing_grade'].__get__(second_exam, Exam))
+    #+end_src
+
+    #+RESULTS:
+    : Writing 82
+    : Science 99
+    : Second 75 is right
+    : First 82 is right!!!
+    : 82
+    : 75
+    
+
+    *Takeaways*
+
+    - Reuse the behavior and validation of =@property= methods by defining your own descriptor classes.
+    - Use =WeakKeyDictionary= to ensure that your descriptor classes don't cause memory leaks
+    - Don't get bogged down trying to understand exactly how =__getattribute__= uses the descriptor protocol for getting and setting attributes.
+
 
 *** TODO 32. Use =__getattr__=, =__getattribute__=, and =__setattr__= for Lazy Attributes
 
@@ -2866,10 +3045,10 @@
 ** Time
 
  #+BEGIN: clocktable :scope file :maxlevel 3
- #+CAPTION: Clock summary at [2019-07-19 Fri 15:55]
+ #+CAPTION: Clock summary at [2019-07-22 Mon 17:14]
  | Headline                                       | Time    |      |      |
  |------------------------------------------------+---------+------+------|
- | *Total time*                                   | *10:30* |      |      |
+ | *Total time*                                   | *11:06* |      |      |
  |------------------------------------------------+---------+------+------|
  | \_  Pythonic Thinking                          |         | 1:27 |      |
  | \_    8. Avoid More Than Two Expressions in... |         |      | 0:07 |
@@ -2895,8 +3074,9 @@
  | \_    26. Use Multiple Inheritance Only for... |         |      | 0:35 |
  | \_    27. Prefer Public Attributes Over...     |         |      | 0:42 |
  | \_    28. Inherit from =collections.abc=...    |         |      | 0:34 |
- | \_  Metaclasses and Attributes                 |         | 1:00 |      |
+ | \_  Metaclasses and Attributes                 |         | 1:36 |      |
  | \_    29. Use Plain Attributes Instead of...   |         |      | 0:39 |
  | \_    30. Consider =@property= Instead of...   |         |      | 0:21 |
+ | \_    31. Use Descriptors for Reusable...      |         |      | 0:36 |
  #+END:
  
