--- a/programming/python/59_Ways.org
+++ b/programming/python/59_Ways.org
@@ -3280,9 +3280,300 @@
     - Avoid infinite recursion in =__getattribute__= and =__setattr__= by using methods from =super()= to access instance attributes directly.
 
 
-*** TODO 33. Validate Subclasses with Metaclasses
+*** DONE 33. Validate Subclasses with Metaclasses
+    CLOSED: [2019-08-07 Wed 14:44]
+    - State "DONE"       from "IN-PROGRESS" [2019-08-07 Wed 14:44]
+    :LOGBOOK:
+    CLOCK: [2019-08-07 Wed 14:31]--[2019-08-07 Wed 14:44] =>  0:13
+    :END:
 
-*** TODO 34. Register Class Existence with Metaclasses
+    Defining a metaclass
+
+    #+begin_src python :session :results output :exports both
+      class Meta(type):
+          def __new__(meta, name, bases, class_dict):
+              print((meta, name, bases, class_dict))
+              return type.__new__(meta, name, bases, class_dict)
+
+      class MyClass(object, metaclass=Meta):
+          stuff = 123
+
+          def foo(self):
+              pass
+    #+end_src
+
+    #+RESULTS:
+    : (<class '__main__.Meta'>, 'MyClass', (<class 'object'>,), {'__module__': '__main__', '__qualname__': 'MyClass', 'stuff': 123, 'foo': <function MyClass.foo at 0x1058d89d8>})
+
+    Provide validation via a metaclass
+    
+
+    #+begin_src python :session :results output :exports both
+      class ValidatePolygon(type):
+          def __new__(meta, name, bases, class_dict):
+              # Don't validate the abstract Polygon class
+              if bases != (object,):
+                  if class_dict['sides'] < 3:
+                      raise ValueError('Polygons need 3+ sides')
+              return type.__new__(meta, name, bases, class_dict)
+
+      class Polygon(object, metaclass=ValidatePolygon):
+          sides = None # specified by subclasses
+
+          @classmethod
+          def interior_angles(cls):
+              return (cls.sides - 2) * 180
+
+      class Triangle(Polygon):   # this is OK
+          sides = 3
+
+      print('Before class')
+      class Line(Polygon):
+          print('Before sides')
+          sides = 1
+          print('After sides')
+      print('After class')
+    #+end_src
+
+    #+RESULTS:
+    #+begin_example
+    /var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-aIbZBs/python-nbHcHq in <module>
+         18 
+         19 print('Before class')
+    ---> 20 class Line(Polygon):
+         21     print('Before sides')
+         22     sides = 1
+
+    /var/folders/bz/tc86r39x3yb0dm00h93xbbn40000gn/T/babel-aIbZBs/python-nbHcHq in __new__(meta, name, bases, class_dict)
+          4         if bases != (object,):
+          5             if class_dict['sides'] < 3:
+    ----> 6                 raise ValueError('Polygons need 3+ sides')
+          7         return type.__new__(meta, name, bases, class_dict)
+          8 
+
+    ValueError: Polygons need 3+ sides
+
+
+    #+end_example
+
+    Pretty awesome!
+
+    *Takeaways*
+
+    - Use metaclasses to ensure that subclasses are well formed at the time they are defined, before objects of their type are constructed
+    - Metaclasses have slightly different syntax in v2 & v3
+    - The =__new__= method of metaclasses is run after the =class= statement's entire body has been processed
+
+    
+*** DONE 34. Register Class Existence with Metaclasses
+    CLOSED: [2019-08-26 Mon 15:59]
+    - State "DONE"       from "IN-PROGRESS" [2019-08-26 Mon 15:59]
+    :LOGBOOK:
+    CLOCK: [2019-08-26 Mon 15:25]--[2019-08-26 Mon 15:59] =>  0:34
+    CLOCK: [2019-08-26 Mon 15:12]--[2019-08-26 Mon 15:23] =>  0:11
+    :END:
+
+    A serialize/deserialize example
+    
+    #+begin_src python :session :results output :exports both
+      import json
+
+      class Serializable(object):
+          def __init__(self, *args):
+              self.args = args
+
+          def serialize(self):
+              return json.dumps({'args': self.args})
+
+      class Point2D(Serializable):
+          def __init__(self, x, y):
+              super().__init__(x, y)
+              self.x = x
+              self.y = y
+
+          def __repr__(self):
+              return 'Point2D(%d, %d)' % (self.x, self.y)
+
+      point = Point2D(5, 3)
+      print('Object:     ', point)
+      print('Serialized: ', point.serialize())
+    #+end_src
+
+    #+RESULTS:
+    : Object:      Point2D(5, 3)
+    : Serialized:  {"args": [5, 3]}
+    : 
+    : 
+
+
+    #+begin_src python :session :results output :exports both
+      import json
+
+      class Serializable(object):
+          def __init__(self, *args):
+              self.args = args
+
+          def serialize(self):
+              return json.dumps({'args': self.args})
+
+      class Deserializable(Serializable):
+          @classmethod
+          def deserialize(cls, json_data):
+              params = json.loads(json_data)
+              return cls(*params['args'])
+
+      class BetterPoint2D(Deserializable):
+          def __init__(self, x, y):
+              super().__init__(x, y)
+              self.x = x
+              self.y = y
+
+          def __repr__(self):
+              return 'Point2D(%d, %d)' % (self.x, self.y)
+
+
+      point = BetterPoint2D(5, 3)
+      print('Before:     ', point)
+      data = point.serialize()
+      print('Serialized: ', data)
+      after = BetterPoint2D.deserialize(data)
+      print('After:      ', after)
+    #+end_src
+
+    #+RESULTS:
+    : Before:      Point2D(5, 3)
+    : Serialized:  {"args": [5, 3]}
+    : After:       Point2D(5, 3)
+    : 
+    : 
+
+    This works for 2D point types, but does not really extend to other classes. Since other classes would likely need serialize/deserialize capabilities, this becomes inflexible.
+
+    We can maintain a mapping to the classes with a registry.
+
+    #+begin_src python :session :results output :exports both
+      import json
+
+      class BetterSerializable(object):
+          def __init__(self, *args):
+              self.args = args
+
+          def serialize(self):
+              return json.dumps({
+                  'class': self.__class__.__name__,
+                  'args': self.args,
+              })
+
+          def __repr__(self):
+              serialized = self.serialize()
+              return '{}{}'.format(self.__class__.__name__, self.args)
+
+
+      class EvenBetterPoint2D(BetterSerializable):
+          def __init__(self, x, y):
+              super().__init__(x, y)
+
+
+
+      registry = {}
+
+      def register_class(target_class):
+          registry[target_class.__name__] = target_class
+
+      def deserialize(data):
+          params = json.loads(data)
+          name = params['class']
+          target_class = registry[name]
+          return target_class(*params['args'])
+
+      register_class(EvenBetterPoint2D)
+
+      point = EvenBetterPoint2D(5, 3)
+      print('Before:      ', point)
+      data = point.serialize()
+      print('Serialized:  ', data)
+      after = deserialize(data)
+      print('After:      ', after)
+    #+end_src
+
+    #+RESULTS:
+    : Before:       EvenBetterPoint2D(5, 3)
+    : Serialized:   {"class": "EvenBetterPoint2D", "args": [5, 3]}
+    : After:       EvenBetterPoint2D(5, 3)
+    : 
+    : 
+
+    This works on more classes, but if you forget to =register_class=, code will break at runtime by referencing a non-existant key.
+    
+    How can we ensure all the classes that we want to have this functionality gets it?
+    
+    Meta!
+    
+
+    #+begin_src python :session :results output :exports both
+      import json
+
+      registry = {}
+
+      def register_class(target_class):
+          registry[target_class.__name__] = target_class
+
+      def deserialize(data):
+          params = json.loads(data)
+          name = params['class']
+          target_class = registry[name]
+          return target_class(*params['args'])
+
+      class BetterSerializable(object):
+          def __init__(self, *args):
+              self.args = args
+
+          def serialize(self):
+              return json.dumps({
+                  'class': self.__class__.__name__,
+                  'args': self.args,
+              })
+
+          def __repr__(self):
+              serialized = self.serialize()
+              return '{}{}'.format(self.__class__.__name__, self.args)
+
+
+      class Meta(type):
+          def __new__(meta, name, bases, class_dict):
+              cls = type.__new__(meta, name, bases, class_dict)
+              register_class(cls)
+              return cls
+
+      class RegisteredSerializable(BetterSerializable, metaclass=Meta):
+          pass
+
+      class Vector3D(RegisteredSerializable):
+          def __init__(self, x, y, z):
+              super().__init__(x, y, z)
+              self.x, self.y, self.z = x, y, z
+
+
+      v3 = Vector3D(10, -7, 3)
+      print('Before:      ', v3)
+      data = v3.serialize()
+      print('Serialized:  ', data)
+      print('After:       ', deserialize(data))
+    #+end_src
+
+    #+RESULTS:
+    : Before:       Vector3D(10, -7, 3)
+    : Serialized:   {"class": "Vector3D", "args": [10, -7, 3]}
+    : After:        Vector3D(10, -7, 3)
+    : 
+    : 
+
+    *Takeaways*
+   
+    - Class registration is a helpful patter for building modular Python programs
+    - Metaclasses let you run registration code automatically each time your base class is subclassed in a program
+    - Using metaclasses for class registration avoids errors by ensuring that you never miss a registration call
+
 
 *** TODO 35. Annotate Class Attributes with Metaclasses
 
@@ -3297,10 +3588,10 @@
 ** Time
 
  #+BEGIN: clocktable :scope file :maxlevel 3
- #+CAPTION: Clock summary at [2019-07-24 Wed 17:05]
+ #+CAPTION: Clock summary at [2019-08-26 Mon 16:00]
  | Headline                                       | Time    |      |      |
  |------------------------------------------------+---------+------+------|
- | *Total time*                                   | *11:43* |      |      |
+ | *Total time*                                   | *12:41* |      |      |
  |------------------------------------------------+---------+------+------|
  | \_  Pythonic Thinking                          |         | 1:27 |      |
  | \_    8. Avoid More Than Two Expressions in... |         |      | 0:07 |
@@ -3326,10 +3617,12 @@
  | \_    26. Use Multiple Inheritance Only for... |         |      | 0:35 |
  | \_    27. Prefer Public Attributes Over...     |         |      | 0:42 |
  | \_    28. Inherit from =collections.abc=...    |         |      | 0:34 |
- | \_  Metaclasses and Attributes                 |         | 2:13 |      |
+ | \_  Metaclasses and Attributes                 |         | 3:11 |      |
  | \_    29. Use Plain Attributes Instead of...   |         |      | 0:39 |
  | \_    30. Consider =@property= Instead of...   |         |      | 0:21 |
  | \_    31. Use Descriptors for Reusable...      |         |      | 0:36 |
  | \_    32. Use =__getattr__=,...                |         |      | 0:37 |
+ | \_    33. Validate Subclasses with Metaclasses |         |      | 0:13 |
+ | \_    34. Register Class Existence with...     |         |      | 0:45 |
  #+END:
  
